--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "npyjs": "^0.6.0"
+    "npyjs": "^0.6.0",
+    "three": "^0.163.0"
   }
 }
